# wschat

./: .gitignore  README.md  package-lock.json  package.json  vue.config.js
backend/: pyproject.toml
backend/backend/: chatapi.py  main.py
src/: App.vue  main.js
src/components/: ChatRoom.vue  Home.vue
src/router/: index.js
src/store/: index.js
src/styles/: quasar.variables.sass
