[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sqmch <sqmchh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
broadcaster = "^0.2.0"
asyncpg = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
